Fix a UI jump with the close-button hover

--- a/webchordr/app/static/stylesheets/components/_detail-view.scss
+++ b/webchordr/app/static/stylesheets/components/_detail-view.scss
@@ -11,7 +11,8 @@
         .close-button {
             margin-left: auto;
 
-            @include button-default($border: none, $width: 42px);
+            @include button-default($border: auto, $width: 42px);
+            border-color: transparent;
         }
     }
 
